[tool.poetry]
name = "aiocertstream"
version = "0.1.1"
description = "An async client for certstream."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
repository = "https://github.com/vcokltfre/aiocertstream"
readme = "README.md"
keywords = ["certstream", "asyncio"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
